fixed height problem when on smaller screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,10 +64,17 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  
 }
 
 .saveBtn:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
   
+}
+
+@media screen and (max-width: 995px) {
+  .row {
+    height: 160px;
+  }
 }
